--- a/呼叫.md
+++ b/呼叫.md
@@ -5,5 +5,5 @@
 ```bash
 originate user/1000 &echo
 ```
-> [!TIP]
-> Helpful advice for doing things better or more easily
+## 呼叫字符串
+在上例中，使用了user/1000，user/1000被称为呼叫字符串（Dial String，有时也叫做Call URL）
