--- a/呼叫.md
+++ b/呼叫.md
@@ -7,3 +7,8 @@ originate user/1000 &echo
 ```
 ## 呼叫字符串
 在上例中，使用了user/1000，user/1000被称为呼叫字符串（Dial String，有时也叫做Call URL）
+## 来去话、Session、Channel与Call
++ Bob向FreeSwitch发起呼叫，FreeSwitch接着启动另一个UA呼叫Hans，两者通话
++ FreeSwitch同时呼叫Bob和Hans，两者接电话后FreeSwitch将a-leg和b-leg桥接（bridge）到一起，两者通话
+这两种呼叫流程中，Bob到FreeSwitch的通话称为来话（针对FreeSwitch而言），而FreeSwitch作为一个B2BUA（背对背用户代理）再去呼叫Hans，就称为去话。
+无论来话还是去话，对每一次呼叫，FreeSwitch都会启动一个Session（会话，它包含SIP会话，SIP会在每对UAC-UAS之间生成一个SIP Session），用于控制整个呼叫，它会一直持续到通话结束。其中，每个Session都控制着一个Channel（通道，又称信道），Channel是一对UA间通信的实体，相当于FreeSwitch的一条腿
