--- a/呼叫.md
+++ b/呼叫.md
@@ -11,4 +11,8 @@ originate user/1000 &echo
 + Bob向FreeSwitch发起呼叫，FreeSwitch接着启动另一个UA呼叫Hans，两者通话
 + FreeSwitch同时呼叫Bob和Hans，两者接电话后FreeSwitch将a-leg和b-leg桥接（bridge）到一起，两者通话
 这两种呼叫流程中，Bob到FreeSwitch的通话称为来话（针对FreeSwitch而言），而FreeSwitch作为一个B2BUA（背对背用户代理）再去呼叫Hans，就称为去话。
-无论来话还是去话，对每一次呼叫，FreeSwitch都会启动一个Session（会话，它包含SIP会话，SIP会在每对UAC-UAS之间生成一个SIP Session），用于控制整个呼叫，它会一直持续到通话结束。其中，每个Session都控制着一个Channel（通道，又称信道），Channel是一对UA间通信的实体，相当于FreeSwitch的一条腿
+无论来话还是去话，对每一次呼叫，FreeSwitch都会启动一个Session（会话，它包含SIP会话，SIP会在每对UAC-UAS之间生成一个SIP Session），用于控制整个呼叫，它会一直持续到通话结束。其
+通话时，FreeSwitch的作用是将两个Channel（a-leg和b-leg，通常先创建的或占主动的叫a-leg）桥接到一起，使双方可以通话。
+这两路桥接的通话（两条腿）再逻辑上组成一个通话，称为一个Call
+## 回铃音与Early Media
+回铃音的一种表现形式就是彩铃（CRBT Color Ring Back Tone）
